--- a/arquivos_site/site_vendas/css/estilo.css
+++ b/arquivos_site/site_vendas/css/estilo.css
@@ -46,7 +46,7 @@ html, body #home{
 	/* background: #584e4e; */
 	color: #ffffff; 
 }
-.parcela {
+.parcela{
 	color: #8f2424;
 	background-color: #dad8d8;
 	font-size: 12px;
@@ -55,8 +55,9 @@ html, body #home{
 	padding: 6px 40px;
 	text-indent: 40px;
 	line-height: 40px;
+	text-decoration: none;
 }
-.a parcela{
+.parcela a{
 	text-decoration: none;
 	cursor: pointer;
 }
@@ -69,8 +70,8 @@ footer{
 	width: 100%;
 }
  h2, h3, h4, h5{
-	font-weight: 500;
-	margin: 15px 0 10px 0;
+	/* font-weight: 500; */
+	/* margin: 15px 0 10px 0; */
 	color: #8f2424;
 }
 p{
@@ -129,11 +130,16 @@ input.btn:hover{
 }
  /* Extra small devices (portrait phones, less than 576px)
  No media query since this is the default in Bootstrap */
+@media (min-width:575px){
+	h1{
+		font-size: 2em;
+	}
+}
 
  /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
 	h1{
-		font-size: 1em;
+		font-size: 2em;
 	}
 }
 
@@ -147,13 +153,13 @@ input.btn:hover{
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 	h1{
-		font-size: 3em;
+		font-size: 2em;
 	}
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
 	h1{
-		font-size: 4em;
+		font-size: 2.5em;
 	}
 }
