--- a/arquivos_site/loja/css/styles.css
+++ b/arquivos_site/loja/css/styles.css
@@ -20,7 +20,7 @@ a {
 
 body {
   padding-top: 5vh;
-  background-image: url('../img/bg-register-page.jpg');
+  background-color: darkgray;
   background-size: cover;
   background-position-y: -150px;
 }
