--- a/arquivos_site/loja/css/estilo.css
+++ b/arquivos_site/loja/css/estilo.css
@@ -75,6 +75,11 @@ footer {
 	/* margin: 15px 0 10px 0; */
 	color: #8f2424;
 }
+h2 {
+	text-align: center;
+	border-top: 50px;
+	font-size: 2.0rem;
+}
 p {
 	text-align: justify;
 	text-indent: 0px;
